<resources>
    <string name="app_name">Proximity User</string>
    <string name="add_guest">Add Guest</string>
    <string name="normal_guest">Normal Guest</string>
    <string name="preferred_guest">Preferred Guest</string>
    <string name="guest_count">Count of guests</string>
    <string name="primary_guest_name">Primary guest name</string>
    <string name="primary_guest_phone">Primary guest phone no</string>
    <string name="guest_email">Email of guest</string>
    <string name="expected_date">Expected date (DD/MM/YYYY)</string>
    <string name="expected_in_time">In time</string>
    <string name="expected_out_time">Out time</string>
    <string name="require_parking">Require Parking</string>
    <string name="add">Add</string>
    <string name="add_other_guest">Add Other Guest</string>
    <string name="send_invitation">SEND INVITATION</string>
    <string name="error_enter_name">Please enter guest name</string>
    <string name="error_enter_phone">Please enter a valid mobile no</string>
    <string name="error_enter_email">Please enter a valid email</string>
    <string name="error_enter_date">Please enter date of arrival</string>
    <string name="enter_intime">Please enter in time</string>
    <string name="enter_outtime">Please enter out time</string>
    <string name="show_qr">Share this QR Code to your guest as invitation</string>
    <string name="invitation">Invitation QR Code</string>
    <string name="permission_not_granted">Please grant permission to proceed</string>
    <string name="share_subject">Welcome to my society. Please show this QR Code to the Security when you enter.</string>
    <string name="share_title">Proximity QR Code</string>
    <string name="no_app_found">No application found to share this.</string>
    <string name="title">Proximity QR Code</string>

    <string name="mobile_number_prefix_91_without_plus">91</string>
    <string name="mobile_number_prefix_91">+91</string>
    <string name="mobile_number_prefix_0">0</string>

    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>

    <string name="maintenance">Maintenance</string>
    <string name="notif_settings">Notification Settings</string>
    <string name="change_password">Change Password</string>
    <string name="tnc">Terms and Condition</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="contact_us">Contact us</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="login_to_access">Login to access your profile</string>
    <string name="dashboard">Dashboard</string>
    <string name="add_guest_btn">+ ADD GUEST</string>
    <string name="present_guests">Present Guests</string>
    <string name="present_guests_desc">See the list of present guests</string>
    <string name="upcoming_guests">Upcoming Guests</string>
    <string name="upcoming_guests_desc">See the list of upcoming guests</string>
    <string name="preferred_guests">Preferred Guests</string>
    <string name="preferred_guests_desc">See the list of your preferred guests</string>
    <string name="history_guests">Guests History</string>
    <string name="history_guests_desc">See the list of your previous guests</string>
    <string name="notice_board">Notice Board</string>
    <string name="dummy_notice">Management is organizing fire drill on 27 March. Resident are requested to obey all rules</string>
    <string name="greeting_message">Hello %s!</string>
    <string name="login_to_proximity">Login to Proximity</string>
    <string name="email_phone">Email/Mobile</string>
    <string name="password">Password</string>
    <string name="forgot_pwd">Forgot Password?</string>
    <string name="new_user">Not a member yet?</string>
    <string name="mock_login">Mock Login</string>
    <string name="forgot_pwd_heading">Forgot Password</string>
    <string name="forgot_pwd_message">We will send you a link to reset your password. Enter Email/Mobile.</string>
    <string name="proceed">PROCEED</string>
    <string name="submit">SUBMIT</string>
    <string name="vehicle_no">Vehicle Number</string>
    <string name="doa">Date of Arrival</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="guest_name">Guest Name</string>
    <string name="mobile">Mobile</string>
    <string name="age">Age</string>
    <string name="guest_list">Guest List</string>
    <string name="enter_mobile_no">Please enter mobile number</string>
    <string name="enter_password">Please enter password</string>
    <string name="login_successfull">Login successful</string>
    <string name="upload_photo">Upload Guest Photo (Optional)</string>
    <string name="crop_image">Crop Image</string>
    <string name="session_expire">Session Expire</string>
    <string name="home">Go Home</string>
    <string name="ok">OK</string>
    <string name="not_authorized">Sorry! You are not authorized to use this app</string>

    <string name="deep_link_scheme">u_prox</string>
    <string name="deep_link_host">user</string>
</resources>
