<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/forgot_pwd_heading"
        android:textColor="#424242"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/forgot_pwd_message"
        android:textColor="#757575"
        android:padding="10dp"
        android:textSize="14sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_user_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:theme="@style/EditTextTheme"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_user_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_phone"
            android:maxLength="25" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/send_btn_bg"
        android:gravity="center"
        android:text="@string/submit"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:textStyle="bold" />
</LinearLayout>