<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="15dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:id="@+id/back_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="10dp"
                    android:src="@drawable/ic_arrow_back" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/back_btn"
                    android:padding="10dp"
                    android:text="@string/add_guest"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal"
            android:visibility="gone"
            android:weightSum="2">

            <RadioButton
                android:id="@+id/rad_normal_guest"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/normal_guest" />

            <RadioButton
                android:id="@+id/rad_pref_guest"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/preferred_guest" />

        </RadioGroup>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:theme="@style/EditTextTheme"
            android:visibility="gone">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_guest_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:hint="@string/guest_count"
                android:inputType="number"
                android:maxLength="2"
                android:text="1" />
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_prime_guest_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextTheme"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_prim_guest_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/primary_guest_name"
                    android:maxLength="25" />
            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/contact_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:src="@drawable/contact" />
        </RelativeLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EditTextTheme"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_prim_guest_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/primary_guest_phone"
                android:inputType="number"
                android:maxLength="10" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EditTextTheme"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_prim_guest_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/guest_email"
                android:inputType="textEmailAddress"
                android:maxLength="50" />
        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/checkbox_preferred"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/preferred_guest" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_arrival_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextTheme"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_expected_date"
                    style="@style/DisabledTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/expected_date"
                    android:inputType="date"
                    android:maxLength="10" />
            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/date_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:padding="10dp"
                app:srcCompat="@drawable/ic_calender" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_in_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextTheme"
                    app:errorEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_in_time"
                        style="@style/DisabledTextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/expected_in_time"
                        android:inputType="date"
                        android:maxLength="10" />
                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/in_time_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:padding="10dp"
                    app:srcCompat="@drawable/ic_time" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_out_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:theme="@style/EditTextTheme"
                    app:errorEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_out_time"
                        style="@style/DisabledTextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/expected_out_time"
                        android:inputType="date"
                        android:maxLength="10" />
                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/out_time_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:padding="10dp"
                    app:srcCompat="@drawable/ic_time" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/round_rec_grey_with_boundary"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/add_parking"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:id="@+id/lbl_parking_Req"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingLeft="20dp"
                    android:text="@string/require_parking"
                    android:textColor="#424242"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:drawableLeft="@drawable/ic_plus"
                    android:drawablePadding="10dp"
                    android:paddingRight="20dp"
                    android:text="@string/add"
                    android:textColor="#475ae8"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/vehicle_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="20dp">

            </android.support.v7.widget.RecyclerView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/round_rec_grey_with_boundary"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/add_other_guest"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingLeft="20dp"
                    android:text="@string/add_other_guest"
                    android:textColor="#424242"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:drawableLeft="@drawable/ic_plus"
                    android:drawablePadding="10dp"
                    android:paddingRight="20dp"
                    android:text="@string/add"
                    android:textColor="#475ae8"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/guest_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="20dp">

            </android.support.v7.widget.RecyclerView>

        </LinearLayout>

        <TextView
            android:id="@+id/btn_send_invitation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/send_btn_bg"
            android:gravity="center"
            android:text="@string/send_invitation"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>